Bug 316989 - LibKGAPI ignores proxy settings
Summary: LibKGAPI ignores proxy settings
Status: CLOSED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-18 17:51 UTC by Luiz Angelo De Luca
Modified: 2015-05-05 08:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0
Sentry Crash Report:


Attachments
patch fixing this bug, tested on Kubuntu 14.04 (490 bytes, patch)
2015-04-27 17:37 UTC, Pierre
Details
Patch for current trunk in extragear (978 bytes, patch)
2015-04-27 18:08 UTC, Pierre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luiz Angelo De Luca 2013-03-18 17:51:08 UTC
Hello,

I have no internet access using NAT. All my browsing is done through an HTTP proxy.
Even with a correct Proxy Configuration, Akonadi does not use proxy in order to contact google and retrieve calendar/contacts data. If the google data exchange is done using HTTP, please, use the kde proxy configuration.

I tested it using static, system, script and automatic options.

Reproducible: Always

Steps to Reproduce:
1.Configure proxy
2.Monitor traffic using wireshark
3.Try to add a google account information inside akonadi
Actual Results:  
4.Akonadi tries to contact google directly, not through proxy (checked using wireshark)

Expected Results:  
5.If proxy is defined, use it to connect to google
Comment 1 Daniel Vrátil 2013-03-19 22:27:42 UTC
Can you please specify which version of LibKGAPI you use?
Comment 2 Luiz Angelo De Luca 2013-03-20 18:52:37 UTC
I'm using OpenSUSE buildservice packages and my libkgapi package is libkgapi0-0.4.4-12.1.x86_64
Comment 3 Daniel Vrátil 2013-05-14 14:31:28 UTC
Git commit 296c5b852b5d2afc6df38c87c41a5e29d7f4cb5a by Dan Vrátil.
Committed on 14/05/2013 at 16:30.
Pushed by dvratil into branch 'master'.

Use KWebView instead QWebView to support KDE proxy settings
FIXED-IN: 2.0

M  +1    -1    common/authwidget_p.inc.cpp
M  +1    -0    libkgapi/ui/authwidget_p.cpp
M  +1    -0    libkgapi2/ui/authwidget_p.cpp

http://commits.kde.org/akonadi-google/296c5b852b5d2afc6df38c87c41a5e29d7f4cb5a
Comment 4 Pierre 2015-04-27 17:35:52 UTC
In Kubuntu 14.04 this bug is still present. The attached patch is necessary to completely fix the problem.
QWebView::setUrl is a non-virtual function. Without declaring webview as a proper KWebView reference, the wrong (i.e. not honouring KDE proxy settings) QWebView method gets called on dispatch.
Comment 5 Pierre 2015-04-27 17:37:54 UTC
Created attachment 92283 [details]
patch fixing this bug, tested on Kubuntu 14.04
Comment 6 Pierre 2015-04-27 18:08:13 UTC
Created attachment 92284 [details]
Patch for current trunk in extragear

The other patch was against an older version, since rev bd008477622b873fad7c6b77c33dad6e2a47ca8b this one is correct.
Comment 7 Christophe Marin 2015-05-05 08:48:28 UTC
fwiw, the last patch was applied to both the stable and master branches