Use KWebView instead QWebView to support KDE proxy settings

BUG: 316989
FIXED-IN: 2.0